# nnzip

./: .gitignore  README.md  api_compress.py  arithmetic_coder.py  brute.c  brute_combined.m  brute_mb.c  brute_metal.m  brute_neon.c  compress.py  compress_index.py  decompress.py  decompress_index.py  llm_compress.py  pyproject.toml  sample.txt  template.html
.github/workflows/: tests.yml
benchmarks/: README.md  run_benchmarks.py
llmz/: __init__.py
nnzip/: __init__.py
tests/: test_roundtrip.py
