[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "llmz"
version = "0.1.0"
description = "Text compression that uses a local GPT-2 model as a probability source."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["compression", "llm", "gpt-2", "arithmetic-coding"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.0",
    "transformers>=4.30,<5",
    "numpy>=1.20,<2",
    "constriction>=0.3",
]

[project.scripts]
llmz = "llmz:main"
compress = "llmz:compress_main"
decompress = "llmz:decompress_main"

[tool.setuptools]
packages = ["llmz"]
