[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nnzip"
version = "0.2.1"
description = "Cross-platform text compression that uses a local GPT-2 (via llama.cpp) as the probability model."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["compression", "llm", "gpt-2", "llama.cpp", "arithmetic-coding"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "llama-cpp-python>=0.3",
    "huggingface_hub>=0.20",
    "numpy>=1.20",
    "constriction>=0.3",
]

[project.scripts]
nnzip = "nnzip:main"
compress = "nnzip:compress_main"
decompress = "nnzip:decompress_main"

[tool.setuptools]
packages = ["nnzip"]
